--- a/coc-settings.json
+++ b/coc-settings.json
@@ -84,11 +84,11 @@
 
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.autoImportCompletions": true,
-  "python.pythonPath": "bin/python",
+  "python.pythonPath": ".venv/bin/python",
   
   "list.source.references.defaultArgs": ["--normal"],
 
   "_comment": "-------------------------------------",
-  "_comment": "PYTHON",
+  "_comment": "SQL",
   "sql.database": "postgresql"
 }
